--- a/AnalitikaAnketaDeltaMotors/App.config
+++ b/AnalitikaAnketaDeltaMotors/App.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -12,4 +13,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="AnalitikaConnection2" providerName="System.Data.SqlServerCe.4.0" connectionString="Server=localhost/SQLEXPRESS;Database=AnalitikaAnketaDB;Trusted_Connection=True;"/>
+    <add name="AnalitikaConnection3" connectionString="Initial Catalog=AnalitikaAnketaDB; Data Source=./SQLEXPRESS; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="AnalitikaConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=AnalitikaAnketaDB;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+
+  </connectionStrings>
 </configuration>
