Dodati Modeli topic i subtopic

--- a/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
+++ b/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
@@ -120,11 +120,23 @@
     <Compile Include="Forms\Podesavanja.Designer.cs">
       <DependentUpon>Podesavanja.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Subtopics.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Subtopics.Designer.cs">
+      <DependentUpon>Subtopics.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Tagovi.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Tagovi.Designer.cs">
       <DependentUpon>Tagovi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Topics.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Topics.Designer.cs">
+      <DependentUpon>Topics.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\202107031701309_InitialCreate.cs" />
     <Compile Include="Migrations\202107031701309_InitialCreate.Designer.cs">
@@ -162,6 +174,18 @@
     <Compile Include="Migrations\202107111153450_relation-table.designer.cs">
       <DependentUpon>202107111153450_relation-table.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202107121404388_Topic.cs" />
+    <Compile Include="Migrations\202107121404388_Topic.designer.cs">
+      <DependentUpon>202107121404388_Topic.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107121408059_Subtopic.cs" />
+    <Compile Include="Migrations\202107121408059_Subtopic.designer.cs">
+      <DependentUpon>202107121408059_Subtopic.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107121413215_RelationshipTopicSubtopic.cs" />
+    <Compile Include="Migrations\202107121413215_RelationshipTopicSubtopic.designer.cs">
+      <DependentUpon>202107121413215_RelationshipTopicSubtopic.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -176,7 +200,9 @@
     <Compile Include="UnitOfWork\Models\Entry.cs" />
     <Compile Include="UnitOfWork\Models\Group.cs" />
     <Compile Include="UnitOfWork\Models\ImportData.cs" />
+    <Compile Include="UnitOfWork\Models\Subtopic.cs" />
     <Compile Include="UnitOfWork\Models\Tag.cs" />
+    <Compile Include="UnitOfWork\Models\Topic.cs" />
     <Compile Include="UnitOfWork\Models\User.cs" />
     <Compile Include="UnitOfWork\UnitOfWork.cs" />
     <Compile Include="UnitOfWork\UnitOfWorkFactory.cs" />
@@ -201,8 +227,14 @@
     <EmbeddedResource Include="Forms\Podesavanja.resx">
       <DependentUpon>Podesavanja.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Subtopics.resx">
+      <DependentUpon>Subtopics.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Tagovi.resx">
       <DependentUpon>Tagovi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Topics.resx">
+      <DependentUpon>Topics.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107031701309_InitialCreate.resx">
       <DependentUpon>202107031701309_InitialCreate.cs</DependentUpon>
@@ -230,6 +262,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107111153450_relation-table.resx">
       <DependentUpon>202107111153450_relation-table.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107121404388_Topic.resx">
+      <DependentUpon>202107121404388_Topic.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107121408059_Subtopic.resx">
+      <DependentUpon>202107121408059_Subtopic.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107121413215_RelationshipTopicSubtopic.resx">
+      <DependentUpon>202107121413215_RelationshipTopicSubtopic.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
