--- a/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
+++ b/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
@@ -85,6 +85,12 @@
     <Compile Include="AnalitikaAnketaDeltaMotors.Designer.cs">
       <DependentUpon>AnalitikaAnketaDeltaMotors.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\ctrlAnswer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ctrlAnswer.Designer.cs">
+      <DependentUpon>ctrlAnswer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ctrlTagBookmarks.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -132,7 +138,7 @@
     </Compile>
     <Compile Include="Forms\TagBookmarks.Designer.cs">
       <DependentUpon>TagBookmarks.cs</DependentUpon>
-	  </Compile>
+    </Compile>
     <Compile Include="Forms\Subtopics.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -202,6 +208,8 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\EntryService.cs" />
+    <Compile Include="Services\IEntryService.cs" />
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="UnitOfWork\DatabaseContext.cs" />
@@ -221,6 +229,9 @@
     <Compile Include="UnitOfWork\UnitOfWorkFactory.cs" />
     <EmbeddedResource Include="AnalitikaAnketaDeltaMotors.resx">
       <DependentUpon>AnalitikaAnketaDeltaMotors.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ctrlAnswer.resx">
+      <DependentUpon>ctrlAnswer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\ctrlTagBookmarks.resx">
       <DependentUpon>ctrlTagBookmarks.cs</DependentUpon>
@@ -245,7 +256,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TagBookmarks.resx">
       <DependentUpon>TagBookmarks.cs</DependentUpon>
-	  </EmbeddedResource>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Subtopics.resx">
       <DependentUpon>Subtopics.cs</DependentUpon>
     </EmbeddedResource>
