Changes on model and db context logic

--- a/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
+++ b/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
@@ -216,6 +216,10 @@
     <Compile Include="Migrations\202107141827333_EntryScore.designer.cs">
       <DependentUpon>202107141827333_EntryScore.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202107161332545_subtopicId.cs" />
+    <Compile Include="Migrations\202107161332545_subtopicId.designer.cs">
+      <DependentUpon>202107161332545_subtopicId.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -319,6 +323,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202107141827333_EntryScore.resx">
       <DependentUpon>202107141827333_EntryScore.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107161332545_subtopicId.resx">
+      <DependentUpon>202107161332545_subtopicId.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
