--- a/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
+++ b/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
@@ -121,6 +121,12 @@
     <Compile Include="Forms\LogOn.Designer.cs">
       <DependentUpon>LogOn.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Newtag.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Newtag.Designer.cs">
+      <DependentUpon>Newtag.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Podesavanja.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,7 +138,7 @@
     </Compile>
     <Compile Include="Forms\TagBookmarks.Designer.cs">
       <DependentUpon>TagBookmarks.cs</DependentUpon>
-	  </Compile>
+    </Compile>
     <Compile Include="Forms\Subtopics.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -240,12 +246,15 @@
     <EmbeddedResource Include="Forms\LogOn.resx">
       <DependentUpon>LogOn.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Newtag.resx">
+      <DependentUpon>Newtag.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Podesavanja.resx">
       <DependentUpon>Podesavanja.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TagBookmarks.resx">
       <DependentUpon>TagBookmarks.cs</DependentUpon>
-	  </EmbeddedResource>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Subtopics.resx">
       <DependentUpon>Subtopics.cs</DependentUpon>
     </EmbeddedResource>
