--- a/AnalitikaAnketaDeltaMotors/App.config
+++ b/AnalitikaAnketaDeltaMotors/App.config
@@ -4,6 +4,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="AnalitikaAnketaDeltaMotors.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
@@ -19,4 +22,14 @@
     <add name="AnalitikaConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=AnalitikaAnketaDB;Integrated Security=True;" providerName="System.Data.SqlClient"/>
 
   </connectionStrings>
+  <userSettings>
+    <AnalitikaAnketaDeltaMotors.Properties.Settings>
+      <setting name="checkBox1" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="checkBox3" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </AnalitikaAnketaDeltaMotors.Properties.Settings>
+  </userSettings>
 </configuration>
