--- a/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
+++ b/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
@@ -110,6 +110,12 @@
     <Compile Include="Controls\CtrlTagBookmarks.Designer.cs">
       <DependentUpon>CtrlTagBookmarks.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\AddingSubtopic.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddingSubtopic.Designer.cs">
+      <DependentUpon>AddingSubtopic.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\AddingUser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -273,6 +279,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\CtrlTagBookmarks.resx">
       <DependentUpon>CtrlTagBookmarks.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddingSubtopic.resx">
+      <DependentUpon>AddingSubtopic.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddingUser.resx">
       <DependentUpon>AddingUser.cs</DependentUpon>
