--- a/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
+++ b/AnalitikaAnketaDeltaMotors/AnalitikaAnketaDeltaMotors.csproj
@@ -57,7 +57,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
@@ -181,6 +183,12 @@
     </Compile>
     <Compile Include="Forms\Topics.Designer.cs">
       <DependentUpon>Topics.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Installer1.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Installer1.Designer.cs">
+      <DependentUpon>Installer1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\202107031701309_InitialCreate.cs" />
     <Compile Include="Migrations\202107031701309_InitialCreate.Designer.cs">
