Setup and connection string

--- a/AnalitikaAnketaDeltaMotors/App.config
+++ b/AnalitikaAnketaDeltaMotors/App.config
@@ -16,7 +16,7 @@
   <connectionStrings>
     <add name="AnalitikaConnection2" providerName="System.Data.SqlServerCe.4.0" connectionString="Server=localhost/SQLEXPRESS;Database=AnalitikaAnketaDB;Trusted_Connection=True;"/>
     <add name="AnalitikaConnection3" connectionString="Initial Catalog=AnalitikaAnketaDB; Data Source=./SQLEXPRESS; Trusted_Connection=True;" providerName="System.Data.SqlClient" />
-    <add name="AnalitikaConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=AnalitikaAnketaDB;Integrated Security=True;" providerName="System.Data.SqlClient"/>
+    <add name="AnalitikaConnection" connectionString="Data Source=localhost\SQLEXPRES;Initial Catalog=AnalitikaAnketaDB;Integrated Security=True;" providerName="System.Data.SqlClient"/>
 
   </connectionStrings>
 </configuration>
